[project]
name = "control-of-proper-nutrition"
version = "0.1.0"
description = "Данные проект контролирует ваше правильное питания, водный баланс, подсчет калорий и ставит цели на определенное вами время. А так же содержит в себе рецепты блюд, продукты и их соответствующую калорийность."
authors = [
    {name = "Lanterman",email = "klivchinskydmitry@gmail.com"}
]
readme = "README.md"
requires-python = "3.13"
dependencies = [
    "fastapi[standart] (>=0.116.1,<0.117.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.10.6,<8.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pillow (>=11.3.0,<12.0.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
